--- a/project1.css
+++ b/project1.css
@@ -1,3 +1,10 @@
 h1{
-    background: url("https://cdn-images-1.medium.com/max/1600/0*OJHziPOprUgquNaC"); 
+    text-align: center;
+
+}
+
+body{
+    text-align: center;
+    list-style-position: inside;
+    background-color:lightyellow;
 }
