--- a/project1.css
+++ b/project1.css
@@ -1,6 +1,6 @@
 h1{
     text-align: center;
-
+    font-size: 35px;
 }
 
 body{
@@ -10,4 +10,24 @@ body{
 
 .home-title {
     color:royalblue;
+}
+
+.topic{
+    text-align: center;
+    font-weight: bold;
+    font-size: 25px;
+}
+
+.home-logo{
+    position: center;
+}
+
+.tlogo1{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 250px;
+    height: 275px;
+    margin-top: -250px; 
+    margin-left: -250px;
 }
