--- a/project1.css
+++ b/project1.css
@@ -1,33 +1,68 @@
 h1{
     text-align: center;
     font-size: 35px;
+    margin: 20px;
 }
 
 body{
-    
+    font-family: Arial, Helvetica, sans-serif;
     background-color:lightyellow;
+    padding: 35px;
+    border: 25px
+    
 }
 
 .home-title {
-    color:royalblue;
+    color:whitesmoke;
+    background-color:red;
 }
 
 .topic{
+    text-align: left;
+    font-weight: bold;
+    font-size: 25px;
+}
+
+ul{
+    list-style-position: inside;
+    list-style-type: square;
+}
+
+.tlogo1{
+    display: block;
+    margin: 0 auto;
+    
+}
+
+#citbp{
+    display: block;
+    margin: 0 auto;
+}
+
+#names{
+    font-size: 18px;
+}
+
+#stadium{
+    font-size: 18px;
+    
+}
+
+#current-season{
+    text-align: center;
+    font-size: 18px;
+}
+
+.stad{
     text-align: center;
     font-weight: bold;
     font-size: 25px;
 }
 
-.home-logo{
-    position: center;
-}
-
-.tlogo1{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 250px;
-    height: 275px;
-    margin-top: -250px; 
-    margin-left: -250px;
+#CBPP{
+    display: inline-block;
+    border: 3px dashed red;
+    border-radius: 3px;
+    margin: 10px;
+    padding: 14px;
 }
